--- a/UI/Pages/Main.razor
+++ b/UI/Pages/Main.razor
@@ -8,7 +8,7 @@
 
 <div class="main">
     <div class="box top">
-        <p class="ipDisplay">192.168.1.1</p>
+        <p class="ipDisplay">@retrievalPacket.Ip</p>
     </div>
     <div class="bottom">
         <div class="authGrid">
@@ -43,7 +43,7 @@
             
         </div>
         <div class="controlGrid">
-            <EditForm Model="@keyForm" OnValidSubmit="@AddCredentials">
+            <EditForm Model="@keyForm">
                 <DataAnnotationsValidator/>
                 <ValidationSummary/>
                 <div class="box controlForm">                    
@@ -63,17 +63,16 @@
     AuthPacket authPacket;
     UserForm userform;
     KeyForm keyForm;
+    RetrievalPacket retrievalPacket;
+    HttpClient client;
 
     async void CheckCredentials()
     {
-        var client = ClientFactory.CreateClient();
-        client.BaseAddress = new Uri("http://localhost:5005/api/auth");
-        
         authPacket.UserName = userform.UserName;
         authPacket.Password = userform.Password;
         try
         {
-            var response = await client.PostAsJsonAsync(client.BaseAddress, authPacket);
+            var response = await client.PostAsJsonAsync("http://localhost:5005/api/auth", authPacket);
             authPacket = await response.Content.ReadFromJsonAsync<AuthPacket>();
         }
         catch (Exception e)
@@ -87,14 +86,11 @@
 
     async void AddCredentials()
     {
-        var client = ClientFactory.CreateClient();
-        client.BaseAddress = new Uri("http://localhost:5005/api/user");
-        
         authPacket.UserName = userform.UserName;
         authPacket.Password = userform.Password;
         try
         {
-            var response = await client.PostAsJsonAsync(client.BaseAddress, authPacket);
+            var response = await client.PostAsJsonAsync("http://localhost:5005/api/user", authPacket);
             authPacket = await response.Content.ReadFromJsonAsync<AuthPacket>();
         }
         catch (Exception e)
@@ -113,10 +109,6 @@
             Alias = keyForm.alias,
             InstanceID = keyForm.key,
         };
-        
-        var client = ClientFactory.CreateClient();
-        client.BaseAddress = new Uri("http://localhost:5005/api/claim");
-
         try
         {
             var response = await client.PostAsJsonAsync("http://localhost:5005/api/claim", packet);
@@ -126,7 +118,6 @@
         {
             Console.WriteLine("No response from api");
         }
-        
         Console.WriteLine(packet.Success);
         authPacket.Success = packet.Success;
         StateHasChanged();
@@ -134,14 +125,31 @@
 
     async void GetIP()
     {
-        
+        retrievalPacket = new RetrievalPacket()
+        {
+            AuthPacket = authPacket,
+            Alias = keyForm.alias,
+        };
+        try
+        {
+            var response = await client.PostAsJsonAsync("http://localhost:5005/api/fetch", retrievalPacket);
+            retrievalPacket = await response.Content.ReadFromJsonAsync<RetrievalPacket>();
+        }
+        catch (Exception e)
+        {
+            Console.WriteLine("No response from api");
+        }
+        authPacket.Success = retrievalPacket.Success;
+        StateHasChanged();
     }
 
     protected override Task OnInitializedAsync()
     {
         authPacket = new AuthPacket();
         userform = new UserForm();
-        keyForm = new KeyForm();
+        keyForm = new KeyForm() {key = "InstanceKey"};
+        client = ClientFactory.CreateClient();
+        retrievalPacket = new RetrievalPacket() {AuthPacket = authPacket, Ip = "999.999.999.999:9999"};
         return base.OnInitializedAsync();
     }
 
